= Changelog

== Version 1.1.0

[small]#Released at 15.09.2015#

* Refactored RequestHandler (svenkubiak)
* Refactored EhCache to Guava Cache (svenkubiak)
* Added ETag support for dynamic content (svenkubiak)
* Added a method for adding a complete content map to a template (svenkubiak)
* Added administrative URLs @health, @routes, @cache and @config (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/40[#40] Added handling of multiple parameters in controller method (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/39[#39] Added methods for parameter validation (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/37[#37] Added option to set the secure flag for session and auth cookie (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/35[#35] Added method for regular expression to validation (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/34[#34] Added LocalDate and LocalDateTime as request parameter (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/36[#36] Validation now works for numeric values (svenkubiak)
* Updated Documentation (svenkubiak)
* Version bumps (svenkubiak)
** doctester-core 1.1.6 -> 1.1.8
** snakeyaml 1.15 -> 1.16
** junit-toolbox 2.1 -> 2.2
** undertow 1.2.9.Final -> 1.2.11.Final

== Version 1.0.1

[small]#Released at 05.08.2015#

* Fixed typo in archetype that prevented archetype from building (svenkubiak)

== Version 1.0.0

[small]#Released at 31.07.2015#

* Updated documentation (svenkubiak)

== Version 1.0.0-RC5

[small]#Released at 23.07.2015#

* Fixed bug, that prevented dev mode from starting (svenkubiak)
* Updated documentation (svenkubiak)

== Version 1.0.0-RC4

[small]#Released at 23.07.2015#

* Refactored packaging from mangoo.io to io.mangoo (svenkubiak)
* Updated documentation (svenkubiak)
* Sonar refactorings (svenkubiak)
* Added more JavaDoc (svenkubiak)

== Version 1.0.0-RC3

[small]#Released at 10.07.2015#
