@@ -59,6 +59,7 @@ public class Routes implements MangooRoutes {
         Router.mapRequest(Methods.GET).toUrl("/translation").onClassAndMethod(I18nController.class, "translation");
 
         Router.mapRequest(Methods.GET).toUrl("/filter").onClassAndMethod(FilterController.class, "filter");
+        Router.mapRequest(Methods.GET).toUrl("/headerfilter").onClassAndMethod(FilterController.class, "headerfilter");
 
         Router.mapRequest(Methods.POST).toUrl("/validateform").onClassAndMethod(FormController.class, "validateform");
 
