@@ -3,11 +3,12 @@ package io.mangoo.controllers;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
+import org.junit.Test;
+
 import io.mangoo.test.MangooRequest;
 import io.mangoo.test.MangooResponse;
+import io.undertow.util.Headers;
 import io.undertow.util.StatusCodes;
-
-import org.junit.Test;
 
 public class FilterControllerTest {
 
@@ -18,5 +19,14 @@ public class FilterControllerTest {
         assertNotNull(response);
         assertEquals(StatusCodes.OK, response.getStatusCode());
         assertEquals("bar", response.getContent());
+    }
+
+    @Test
+    public void testHeaderFilter() {
+        MangooResponse response = MangooRequest.get("/headerfilter").execute();
+
+        assertNotNull(response);
+        assertEquals(StatusCodes.OK, response.getStatusCode());
+        assertEquals("12", response.getHttpResponse().getFirstHeader(Headers.CONTENT_MD5_STRING).getValue());
     }
 }
