@@ -9,6 +9,7 @@
 * Added ETag support for dynamic content (svenkubiak)
 * Added a method for adding a complete content map to a template (svenkubiak)
 * Added administrative URLs @health, @routes, @cache and @config (svenkubiak)
+* https://github.com/svenkubiak/mangooio/issues/52[#52] Refactored filters (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/40[#40] Added handling of multiple parameters in controller method (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/39[#39] Added methods for parameter validation (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/37[#37] Added option to set the secure flag for session and auth cookie (svenkubiak)
